--- a/QLPhongMachTuWPF/View/Invoice.xaml
+++ b/QLPhongMachTuWPF/View/Invoice.xaml
@@ -41,10 +41,20 @@
 
         <DataGrid Grid.Row="1" ItemsSource="{Binding FilteredInvoice}"
                   SelectedItem="{Binding SelectedInvoice}"
-                  Background="#eeeeee" ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle2}" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"  RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="patientsDatagrid" Margin="0,0,0,10"
+                  x:Name="patientsDatagrid" Margin="0,0,0,10"
          HorizontalScrollBarVisibility="Disabled" Grid.RowSpan="2" 
     HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
     Width="auto" Height="auto" VerticalScrollBarVisibility="Auto">
+            <DataGrid.Resources>
+                <Style TargetType="DataGridColumnHeader">
+                    <Setter Property="Foreground" Value="Black"/>
+                    <Setter Property="FontWeight" Value="Bold"/>
+                    <Setter Property="HorizontalContentAlignment" Value="Center"/>
+                    <Setter Property="Background" Value="DarkGray"/>
+                    <Setter Property="Height" Value="40"/>
+                    <Setter Property="FontSize" Value="16"/>
+                </Style>
+            </DataGrid.Resources>
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Invoice ID" IsReadOnly="True" CanUserResize="False" Width="1*" Binding="{Binding MaHD}" />
                 <DataGridTextColumn Header="Exam form ID" IsReadOnly="True" CanUserResize="False" Width="1*" Binding="{Binding MaPK}"/>
