--- a/QLPhongMachTuWPF/View/Diagnosis.xaml
+++ b/QLPhongMachTuWPF/View/Diagnosis.xaml
@@ -44,7 +44,7 @@
                                 Margin="10"  ItemsSource="{Binding FilteredDiagnosis, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" Background="#eeeeee"  x:Name="patientsDatagrid"
                     SelectedItem="{Binding SelectedItemCommand}" 
                   HorizontalScrollBarVisibility="Disabled" Grid.RowSpan="2" 
-    HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
+    HorizontalAlignment="Stretch" VerticalAlignment="Stretch"  
     Width="auto" Height="auto" VerticalScrollBarVisibility="Auto">
             <DataGrid.Resources>
                 <Style TargetType="DataGridColumnHeader">
@@ -54,6 +54,29 @@
                     <Setter Property="Background" Value="DarkGray"/>
                     <Setter Property="Height" Value="40"/>
                     <Setter Property="FontSize" Value="16"/>
+
+                </Style>
+                <Style TargetType="DataGridCell">
+                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background" Value="Transparent" />
+                            <Setter Property="BorderThickness" Value="0"/>
+                            
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+                <Style TargetType="DataGridRow">
+                    <Setter Property="Background" Value="White" />
+                    <Setter Property="Foreground" Value="Black" />
+                    <!-- Thay đổi màu nền khi dòng được chọn -->
+                    <Style.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background" Value="#1ca7ec" />
+                            <!-- Màu xanh nhạt -->
+                            <Setter Property="Foreground" Value="Black" />
+                        </Trigger>
+                    </Style.Triggers>
                 </Style>
             </DataGrid.Resources>
             <DataGrid.Columns>
