--- a/QLPhongMachTuWPF/View/Staffs.xaml
+++ b/QLPhongMachTuWPF/View/Staffs.xaml
@@ -41,7 +41,8 @@
 
         <DataGrid Grid.Row="1" Background="#eeeeee" SelectedItem ="{Binding SelectedItemCommand}" 
                   ItemsSource="{Binding FilteredStaffs}" 
-                  
+                  AutoGenerateColumns="False"
+                  CanUserAddRows="False"
                   x:Name="staffDatagrid" Margin="0,0,0,10"
           HorizontalScrollBarVisibility="Disabled" Grid.RowSpan="2" 
     HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
@@ -54,6 +55,29 @@
                     <Setter Property="Background" Value="DarkGray"/>
                     <Setter Property="Height" Value="40"/>
                     <Setter Property="FontSize" Value="16"/>
+                    
+                </Style>
+                <Style TargetType="DataGridCell">
+                    <Setter Property="HorizontalAlignment" Value="Center"/>
+                    <Style.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background" Value="Transparent" />
+                            <Setter Property="BorderThickness" Value="0"/>
+                            <Setter Property="Foreground" Value="Black" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+                <Style TargetType="DataGridRow">
+                    <Setter Property="Background" Value="White" />
+                    <Setter Property="Foreground" Value="Black" />
+                    <!-- Thay đổi màu nền khi dòng được chọn -->
+                    <Style.Triggers>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter Property="Background" Value="#1ca7ec" />
+                            <!-- Màu xanh nhạt -->
+                            <Setter Property="Foreground" Value="Black" />
+                        </Trigger>
+                    </Style.Triggers>
                 </Style>
             </DataGrid.Resources>
             <DataGrid.Columns>
