--- a/QLPhongMachTuWPF/View/AddAppointment.xaml
+++ b/QLPhongMachTuWPF/View/AddAppointment.xaml
@@ -151,7 +151,7 @@ SelectedItem="{Binding SelectedYear}"
                 </StackPanel>
 
                 <TextBlock Text="Appointment day" Margin="80 -50 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
-                <TextBlock Text="Gender" Margin="390 -50 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+                <TextBlock Text="Time" Margin="390 -50 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
 
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 250 0 0">
@@ -179,14 +179,14 @@ SelectedItem="{Binding SelectedMonthApp}"
  FontSize="16" Margin="10 0 0 0"/>
                     <!--Gender-->
                     <ComboBox
-                        Text="{Binding Gender}"
-                        ItemsSource="{Binding GenderSource  }"
-                        x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                        Text="{Binding Time}"
+                        ItemsSource="{Binding TimeSource  }"
+                        Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
            FontSize="16" Margin="60 0 0 0"/>
 
                 </StackPanel>
-                <TextBlock Text="Status" Margin="390 150 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
+                <TextBlock Text="Gender" Margin="390 150 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
                 <TextBlock Text="Staff's Name" Margin="80 150 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="100" FontSize="16" Foreground="Gray"/>
 
                 <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="20 350 0 0">
@@ -198,13 +198,15 @@ SelectedItem="{Binding SelectedMonthApp}"
          
 FontSize="16"  Margin="60 0 0 0"/>
 
-
-                    <ComboBox Text="{Binding Status}" 
-                              ItemsSource="{Binding StatusSource}"
-
-                              x:Name="cmbStatus" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+                    <ComboBox
+             Text="{Binding Gender}"
+             ItemsSource="{Binding GenderSource  }"
+             x:Name="cmbGender" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
          
 FontSize="16" Margin="60 0 0 0"/>
+
+
+                    
 
 
                 </StackPanel>
