--- a/QLPhongMachTuWPF/View/ModifyDetailInvoice.xaml
+++ b/QLPhongMachTuWPF/View/ModifyDetailInvoice.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
         Title="DetailInovice" Height="800" Width="880"
         DataContext="{StaticResource ModifyDetailInvoiceVM}"
+        Name="ModifyInvoice"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes" xmlns:viewmodel="clr-namespace:QLPhongMachTuWPF.ViewModel" d:DataContext="{d:DesignInstance Type=viewmodel:ModifyDetailInvoiceVM}"
         WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent" AllowsTransparency="True">
 
@@ -102,7 +103,7 @@
                     </Button.Background>
                 </Button>
                 <Border CornerRadius="0 10 0 0" Background="White"/>
-                <TextBlock Text="INVOICE DETAILS" Style="{StaticResource titleText}" HorizontalAlignment="Center" Margin="0 0 0 0"/>
+                <TextBlock Text="INVOICE PREVIEW" Style="{StaticResource titleText}" HorizontalAlignment="Center" Margin="0 0 0 0"/>
             </Grid>
 
             <!--Input-->
@@ -172,7 +173,8 @@
         Command = "{Binding SaveChangesCommand}"
         Content="Save changes" Margin="10 0 80 0" FontSize="20" Width="180" Height="40" Foreground="White"/>
                     <Button
-        Command="{Binding PrintCommand}"
+        Command="{Binding PrintCommand }"
+                       
         Content="Print" Margin="0 10" Width="180" FontSize="20" Height="40" Foreground="White"/>
                 </StackPanel>
             </Grid>
