--- a/QLPhongMachTuWPF/View/Lists.xaml
+++ b/QLPhongMachTuWPF/View/Lists.xaml
@@ -30,7 +30,11 @@
             <TextBlock Margin="20,0,30,0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
    Panel.ZIndex="1" Text="Search" Visibility="{Binding ElementName=txtSearch, Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}" FontSize="20"/>
 
-            <TextBox x:Name="txtSearch" Style="{StaticResource txtBoxSearch}"/>
+            <TextBox
+                
+                x:Name="txtSearch" Style="{StaticResource txtBoxSearch}"
+                  Text="{Binding SearchKeyword, UpdateSourceTrigger=PropertyChanged}"
+                />
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
