--- a/QLPhongMachTuWPF/View/Invoice.xaml
+++ b/QLPhongMachTuWPF/View/Invoice.xaml
@@ -22,20 +22,14 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-        
-        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="10 30 400 35">
-            <TextBlock Margin="20,0,30,0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
-   Panel.ZIndex="1" Text="Search" Visibility="{Binding ElementName=txtSearch, Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}" FontSize="20"/>
 
-            <TextBox x:Name="txtSearch" Style="{StaticResource txtBoxSearch}"/>
-            <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
+        <Grid Grid.Row="0" Width="175" HorizontalAlignment="Left" Margin="70 30 400 35" >
+            <Border BorderThickness="2" CornerRadius="5" BorderBrush="Black"  Height="30">
+                <DatePicker Background="#eeeeee" Width="150"  ></DatePicker>
+            </Border>
         </Grid>
 
-        <Button Grid.Row="0"  HorizontalAlignment="Left" Command="{Binding AddInvoiceCommand}"  Style="{StaticResource addBtn}">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Add Invoice" FontSize="15" FontWeight="Bold"/>
-            </StackPanel>
-        </Button>
+
 
 
 
@@ -85,7 +79,7 @@
                                 <Button
                                   Command="{Binding DataContext.VerifyCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
                                   CommandParameter="{Binding}"
-                                  x:Name="btnVerify" Style="{StaticResource gridRemoveBtn}" Background="Green">             
+                                  x:Name="btnVerify" Style="{StaticResource gridRemoveBtn}" Background="Green" Margin="0 0 5 0">             
                                     <materialDesign:PackIcon Kind="CheckBold" Width="20" Height="20" Foreground="White"/>
                                 </Button>
                                 <Button 
@@ -103,12 +97,6 @@
             </DataGrid.Columns>
         </DataGrid>
         
-        <Button 
-            Command="{Binding ModifyInvoiceCommand}"
-            Grid.Row="0"   Style="{StaticResource anotherAddBtn}" >
-            <StackPanel Orientation="Horizontal">
-                <TextBlock Text="Modify invoice" FontSize="15" FontWeight="Bold"/>
-            </StackPanel>
-        </Button>
+       
     </Grid>
 </UserControl>
