--- a/QLPhongMachTuWPF/View/ManageAppointments.xaml
+++ b/QLPhongMachTuWPF/View/ManageAppointments.xaml
@@ -25,13 +25,11 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
-       
-        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100 30 400 35">
-            <TextBlock Margin="20,0,30,0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
-   Panel.ZIndex="1" Text="Search" Visibility="{Binding ElementName=txtSearch, Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}" FontSize="20"/>
 
-            <TextBox x:Name="txtSearch" Style="{StaticResource txtBoxSearch}"/>
-            <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
+        <Grid Grid.Row="0" Width="175" HorizontalAlignment="Left" Margin="70 30 400 35" >
+            <Border BorderThickness="2" CornerRadius="5" BorderBrush="Black" Height="30" >
+                <DatePicker Background="#eeeeee" Width="150"  ></DatePicker>
+            </Border>
         </Grid>
 
         <Button Grid.Row="0" Command="{Binding AddAppointmentCommand}"  Style="{StaticResource addBtn}" >
