--- a/QLPhongMachTuWPF/View/Patients.xaml
+++ b/QLPhongMachTuWPF/View/Patients.xaml
@@ -94,8 +94,9 @@
 
                                 <Button  Command="{Binding DataContext.DeletePatientCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
 CommandParameter="{Binding}"
-Style="{StaticResource gridRemoveBtn}" Background="Red">
+Style="{StaticResource gridRemoveBtn}" >
                                     <materialDesign:PackIcon Kind="TrashCan" Width="20" Height="20" Foreground="White" />
+                                    
                                 </Button>
                             </StackPanel>
                         </DataTemplate>
