--- a/QLPhongMachTuWPF/MainWindow.xaml
+++ b/QLPhongMachTuWPF/MainWindow.xaml
@@ -246,9 +246,9 @@
                           Background="Transparent"
                           BorderBrush="Transparent"
                           ScrollViewer.HorizontalScrollBarVisibility="Disabled" >
-
-                    <!-- Homepage-->
-
+                   
+                        <!-- Homepage-->
+                    
                     <ListViewItem HorizontalAlignment="Left"
                                   Margin="0 0 0 10" MouseEnter="ListViewItem_MouseEnter" >
                         <Border Background="{Binding HomeBackground}" CornerRadius="10">
@@ -414,9 +414,10 @@ Style="{StaticResource tt_style}"/>
                     <!--Log out-->
 
                     <ListViewItem HorizontalAlignment="Left"
-                    Margin="0 150 0 0" MouseEnter="ListViewItem_MouseEnter">
+                    MouseEnter="ListViewItem_MouseEnter" x:Name="logOut" Margin="0 150 0 0">
+                        
                         <Button Command="{Binding LogoutCommand}" CommandParameter="{Binding ElementName=mainWindow}" Background="Transparent" BorderBrush="Transparent" Height="45" Width="55" Padding="0">
-                            <StackPanel Orientation="Horizontal"
+                            <StackPanel Orientation="Horizontal" 
                      Width="200">
 
                                 <materialDesign:PackIcon Kind="LockOpen"  Width="30" Height="30" Foreground="White" Margin="12 0 0 0"/>
@@ -424,6 +425,7 @@ Style="{StaticResource tt_style}"/>
 
                             </StackPanel>
                         </Button>
+                        
                         <!--ToolTip-->
                         <ListViewItem.ToolTip>
 
@@ -489,7 +491,7 @@ Style="{StaticResource tt_style}"/>
 
                         </Style>
                     </ListView.ItemContainerStyle>
-
+                    
                 </ListView>
 
 
