--- a/QLPhongMachTuWPF/View/Lists.xaml
+++ b/QLPhongMachTuWPF/View/Lists.xaml
@@ -86,7 +86,7 @@
                                 <Button 
                                      Command="{Binding DataContext.DeleteMedicineCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
     CommandParameter="{Binding}"
-                                    Style="{StaticResource gridRemoveBtn}" Background="Red" >
+                                    Style="{StaticResource gridRemoveBtn}">
                                     <materialDesign:PackIcon Kind="TrashCan" Width="20" Height="20" Foreground="White" />
                                 </Button>
                             </StackPanel>
