--- a/QLPhongMachTuWPF/View/ManageAppointments.xaml
+++ b/QLPhongMachTuWPF/View/ManageAppointments.xaml
@@ -26,9 +26,9 @@
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <Grid Grid.Row="0" Width="175" HorizontalAlignment="Left" Margin="70 30 400 35" >
+        <Grid Grid.Row="0" Width="250" HorizontalAlignment="Left" Margin="100 30 400 35" >
             <Border BorderThickness="2" CornerRadius="5" BorderBrush="Black" Height="30" >
-                <DatePicker Background="#eeeeee" Width="150"  ></DatePicker>
+                <DatePicker Background="#eeeeee" FontSize="16" Margin="8,0,8,0" />
             </Border>
         </Grid>
 
